# effective-haskell

Chapter1/: Chapter1.hs  Exercises.hs  FizzBuzz.hs  Main  Main.hs
Chapter2/: Exercises.hs  Fibs.hs  Flatfile.hs  FoldExamples.hs  Main.hs  Main2.hs
Chapter3/: Biggest.hs  Exercises.hs  Main.hs  TypeHoleDemo.hs
Chapter4/: Calculator.hs  Exercises.hs  List.hs  Main.hs  Main2.hs  ParserExample.hs  Peano.hs  Sums.hs
Chapter5/import-demo/: import-demo.cabal
Chapter5/import-demo/app/: Main.hs
Chapter5/learn-cabal/: LICENSE  learn-cabal.cabal
Chapter5/module-examples/: module-examples.cabal
Chapter5/module-examples/src/: ModuleDemo.hs
Chapter5/module-examples/src/HaskellBook/: Examples.hs
Chapter5/module-examples/src/HaskellBook/Examples/: SortedList.hs  UserInfo.hs
Chapter5/module-examples/src/HaskellBook/Examples/Introduction/: CreatingModules.hs
