cabal-version:      2.4
name:               import-demo
version:            0.1.0.0
license:            NONE

executable import-demo
    main-is:          Main.hs
    extensions: ImportQualifiedPost
    build-depends:    base
                    , text
    hs-source-dirs:   app
    default-language: Haskell2010

